--- a/style.css
+++ b/style.css
@@ -382,13 +382,9 @@ footer .foot a:hover {
     }
 
     .SiCard {
-        background: linear-gradient(rgba(0, 0, 0, 0.22), rgba(0, 0, 0, 0.67)), url(../images/ccard2.jpg);
         height: 45vh;
         background-size: cover;
         width: 90%;
-        margin: 50px 50px;
-        display: flex;
-        align-items: center;
     }
 
     .box {
@@ -405,8 +401,12 @@ footer .foot a:hover {
 
 @media screen and (max-width:420px) {
 
-    h2,h4{
-        font-size: 24px;
+    h4{
+        font-size: 20px;
+    }
+    
+    h5{
+        font-size: 18px;
     }
 
     .header .nav .menu{
